main website updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
                 </a>
             </div>
 
-            <!-- more project cards -->
+            <div class="project-card">
+                <h3>Discord Messages Deleter</h3>
+                <p>Inspired by UnDiscord, a local cli version designed to be more stable</p>
+                <a href="https://github.com/arti4ikmin/delete-Discord-Messages"
+                   class="project-link"
+                   target="_blank">
+                    View on GitHub <i class="fab fa-github"></i>
+                </a>
+            </div>
+
+            <!-- more project cards template -->
             <!--
             <div class="project-card">
                 <h3>Project Title</h3>
