main website updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
     <section class="projects">
         <h2>My Projects</h2>
         <div class="project-grid">
-            <!-- Project Card -->
+            <!-- Project Cards -->
+
+            <div class="project-card">
+                <h3>Tracker powered by a discord bot</h3>
+                <p>A silly project, can be used to track activities of an account (discord / roblox)</p>
+                <a href="https://github.com/arti4ikmin/Spy-And-Scrape"
+                   class="project-link"
+                   target="_blank">
+                    View on GitHub <i class="fab fa-github"></i>
+                </a>
+            </div>
+
+
             <div class="project-card">
                 <h3>Discord Query Generator</h3>
                 <p>Tool to generate Discord search queries with custom parameters</p>
