--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Hi, I'm Arti 👋</h1>
+        <h1>Yo, I'm Arti</h1>
         <p>Backend C family dev and a starter reverse engineer</p>
     </header>
 
@@ -29,15 +29,6 @@
                 </a>
             </div>
 
-
-            <div class="project-card">
-                <h3>Discord Query Generator</h3>
-                <p>Tool to generate Discord search queries with custom parameters</p>
-                <a href="/queries" class="project-link">
-                    Visit Project <i class="fas fa-arrow-right"></i>
-                </a>
-            </div>
-
             <div class="project-card">
                 <h3>Discord Messages Deleter</h3>
                 <p>Inspired by UnDiscord, a local cli version designed to be more stable</p>
@@ -47,6 +38,16 @@
                     View on GitHub <i class="fab fa-github"></i>
                 </a>
             </div>
+
+            <div class="project-card">
+                <h3>Discord Query Generator</h3>
+                <p>Tool to generate Discord search queries with custom parameters</p>
+                <a href="/queries" class="project-link">
+                    Visit Project <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+
 
             <!-- more project cards template -->
             <!--
