--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
             <!-- Project Cards -->
 
             <div class="project-card">
-                <h3>Tracker powered by a discord bot</h3>
-                <p> A silly project, can be used to track activities of an account (discord / roblox)</p>
-                <a href="https://github.com/arti4ikmin/Spy-And-Scrape"
-                   class="project-link"
-                   target="_blank">
-                    View on GitHub <i class="fab fa-github"></i>
+                <h3>Gravitiron</h3>
+                <p>A game I've made in 2023-2024, intended to be published as a mobile game, sadly not enough resources for that</p>
+                <a href="/game" class="project-link">
+                    Play Game <i class="fas fa-arrow-right"></i>
                 </a>
             </div>
+
 
             <div class="project-card">
                 <h3>Discord Messages Deleter</h3>
@@ -47,6 +46,16 @@
                 </a>
             </div>
 
+
+            <div class="project-card">
+                <h3>Tracker powered by a discord bot</h3>
+                <p> A silly project, can be used to track activities of an account (discord / roblox)</p>
+                <a href="https://github.com/arti4ikmin/Spy-And-Scrape"
+                   class="project-link"
+                   target="_blank">
+                    View on GitHub <i class="fab fa-github"></i>
+                </a>
+            </div>
 
 
             <!-- more project cards template -->
