--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                 </a>
             </div>
 
+            <div class="project-card">
+                <h3>Context Menu Tools</h3>
+                <p>Tools for the windows explorer context menu (right click)</p>
+                <a href="https://github.com/arti4ikmin/Artis_ContextMenu_Tools"
+                   class="project-link"
+                   target="_blank">
+                    View on GitHub <i class="fab fa-github"></i>
+                </a>
+            </div>
 
             <div class="project-card">
                 <h3>Discord Messages Deleter</h3>
