--- a/Wurst++/index.html
+++ b/Wurst++/index.html
@@ -126,7 +126,7 @@
     <!-- To add a new feature, just copy and paste one of the <li> lines below -->
     <ul>
         <li>Hack - AutoMLG - </li>
-        <li>No Analytics - Removes analytics of the official wurst client.</li>
+<!--        <li>No Analytics - Removes analytics of the official wurst client.</li>-->
         <li>More smaller features...</li>
     </ul>
 </div>
