--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             </div>
 
             <div class="project-card">
+                <h3>Wurst++</h3>
+                <p>Wurst minecraft client but enchanced</p>
+                <a href="/Wurst++" class="project-link">
+                    Visit Project <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <div class="project-card">
                 <h3>Discord Messages Deleter</h3>
                 <p>Inspired by UnDiscord, a local cli version designed to be more stable</p>
                 <a href="https://github.com/arti4ikmin/delete-Discord-Messages"
